--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     </div>
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
-                        <p><span class="title-s">Name: </span> <span>Rolly Labuanan</span></p>
+                        <p><span class="title-s">Name: </span> <span>Rolly Labuanan Jr</span></p>
                         <p><span class="title-s">linkedin: </span> <span
                             style="color: blue;">https://www.linkedin.com/in/rolly-labuanan/</span></p>
                         <p><span class="title-s">Email: </span> <span style="color: blue;">Labuanan2020@gmail.com</span>
