--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="hero-title mb-4">I am Rolly!</h1>
-          <p class="hero-subtitle"><span class="typed" data-typed-items="Technical, Web Developer, Editor"></span></p>
+          <p class="hero-subtitle"><span class="typed" data-typed-items="Technical Support, Web Developer, Editor"></span></p>
         </div>
       </div>
     </div>
